--- a/source/index.html
+++ b/source/index.html
@@ -6,7 +6,122 @@
   </head>
   <body>
 
-    <p>Репозиторий создан для обучения на профессиональном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/adaptive">HTML и CSS, уровень 2</a>».</p>
+    <header class="page-header">
+      <a class="page-header__logo" >
+        <img class="page-header__logo-image" src="https://via.placeholder.com/83x102" width="102" height="83" alt="Логитип Седоны">
+      </a>
+      <nav class="main-nav">
+        <button class="main-nav__toggle" type="button">Открыть меню</button>
+        <div class="main-nav__wrapper"></div>
+          <ul class="main-nav__list site-list">
+            <li class="site-list__item site-list__item--active">
+              <a>Главная</a>
+            </li>
+            <li class="site-list__item">
+              <a href="photo.html">Фото и видео</a>
+            </li>
+            <li class="site-list__item">
+              <a href="form.html">Форма отзыва</a>
+            </li>
+            <li class="site-list__item">
+              <a href="https://htmlacademy.ru/intensive/adaptive">HTML Academy</a>
+            </li>
+          </ul>
+        </div>
+      </nav>
+    </header>
 
+    <main class="page-main">
+      <h1 class="visually-hidden">Седона, штат Аризона</h1>
+      <section class="welcome">
+        <img class="welcome__image" src="https://via.placeholder.com/214x282" width="282" height="214" alt="Седона">
+      </section>
+      <section class="welcome-text">
+        <h2 class="visually-hidden">Добро пожаловать в Седону</h2>
+        <p class="welcome-text__about">СЕДОНА — небольшой городок в Аризоне, заслуживающий большего!</p>
+        <p class="welcome-text__reasons">Рассмотрим 5 причин, по которым Седона круче, чем гранд каньон!</p>
+      </section>
+      <section class="reasons">
+        <ul class="reasons-list-1">
+          <li class="reasons-list-1__item">
+            <div class="reason-number reason-number--colored">
+              <h3 class="reason-number__header">Настоящий городок</h3>
+              <p class="reason-number__number">- №1 -</p>
+              <p class="reason-number__description">Седона - не аттракцион для туристов, там течет своя жизнь</p>
+            </div>
+            <img class="reasons-list-1__photo-image" src="https://via.placeholder.com/260x320" width="320" height="260" alt="Фото города">
+          </li>
+          <li class="reasons-list-1__item">
+            <ul class="features-list">
+              <li class="feature">
+                <h3 class="feature__header feature__header--house">Жилье</h3>
+                <p class="feature__description">Рекомендуем пожить в настоящем мотеле, все как в кино!</p>
+              </li>
+              <li class="feature">
+                <h3 class="feature__header feature__header--present">Сувениры</h3>
+                <p class="feature__description">Не только китайского, но и местного производства!</p>
+              </li>
+              <li class="feature">
+                <h3 class="feature__header feature__header--burger">Еда</h3>
+                <p class="feature__description">Всегда заказывайте фирменный бургер, вы не разочаруетесь!</p>
+              </li>
+            </ul>
+          </li>
+          <li class="reasons-list-1__item">
+            <div class="reason-number reason-number--colored">
+              <h3 class="reason-number__header">Там есть мост дьявола</h3>
+              <p class="reason-number__number">- №2 -</p>
+              <p class="reason-number__description">Да, по нему можно пройти! Если вы осмелитесь, конечно</p>
+            </div>
+            <img class="reasons-list-1__photo-image" src="https://via.placeholder.com/260x320" width="320" height="260" alt="Фото моста дьявола">
+          </li>
+          <li class="reasons-list-1__item">
+            <ul class="reasons-list-3">
+              <li class="reason-number">
+                <h3 class="reason-number__header">Небольшая площадь</h3>
+                <p class="reason-number__number">- №3 -</p>
+                <p class="reason-number__description">Все интересные места находятся очень близко</p>
+              </li>
+              <li class="reason-number">
+                <h3 class="reason-number__header">Красивая дорога</h3>
+                <p class="reason-number__number">- №4 -</p>
+                <p class="reason-number__description">Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
+              </li>
+              <li class="reason-number">
+                <h3 class="reason-number__header">Мало туристов</h3>
+                <p class="reason-number__number">- №5 -</p>
+                <p class="reason-number__description">Большинство едет в Гранд Каньон и толпится там</p>
+              </li>
+            </ul>
+          </li>
+        </ul>
+      </section>
+      <section class="hotel-search">
+        <h2 class="visually-hidden">Поиск гостиницы</h2>
+        <p class="hotel-search__header">Заинтересовались?</p>
+        <p class="hotel-search__description">Укажите предполагаемые даты поездки, и мы покажем вам лучшие предложения гостиниц в Седоне</p>
+        <button class="hotel-search__button" type="button">Найти гостиницу</button>
+      </section>
+      <section class="map">
+        <h2 class="visually-hidden">Карта Седоны</h2>
+        <img class="map__image" src="https://via.placeholder.com/350x320" width="320" height="350" alt="Карта Седоны">
+      </section>
+    </main>
+
+    <footer class="page-footer">
+      <p class="page-footer__hashteg">#visitsedona</p>
+      <ul class="page-footer__social social">
+        <li class="social__item">
+          <a class="social__link social__link--twitter" href="#">Twitter</a>
+        </li>
+        <li class="social__item">
+          <a class="social__link social__link--facebook" href="#">Facebook</a>
+        </li>
+        <li class="social__item">
+          <a class="social__link social__link--youtube" href="#">Youtube</a>
+        </li>
+      </ul>
+      <a class="page-footer__develop-link" href="https://htmlacademy.ru/intensive/adaptive">Разработано</a>
+    </footer>
   </body>
 </html>
