--- a/source/index.html
+++ b/source/index.html
@@ -34,7 +34,7 @@
     <main class="page-main">
       <h1 class="visually-hidden">Седона, штат Аризона</h1>
       <section class="welcome">
-        <img class="welcome__image" src="https://via.placeholder.com/214x282" width="282" height="214" alt="Седона">
+        <img class="welcome__text-image" src="https://via.placeholder.com/214x282" width="282" height="214" alt="Седона">
       </section>
       <section class="welcome-text">
         <h2 class="visually-hidden">Добро пожаловать в Седону</h2>
