--- a/source/form.html
+++ b/source/form.html
@@ -110,6 +110,16 @@
         </fieldset>
         <button class="review__submit" type="submit">Отправить отзыв</button>
       </form>
+      <section class="sending-fail">
+        <h2 class="sending-fail__header">Что-то пошло не так</h2>
+        <p class="sending-fail__description">Проверьте поля, выделенные красным, скорее всего вы забыли их заполнить</p>
+        <button class="sending-fail__button" type="button">ОК</button>
+      </section>
+      <section class="sending-success">
+        <h2 class="sending-success__header">Ваш отзыв отправлен!</h2>
+        <p class="sending-success__description">Спасибо за ваше участие, ваш отзыв уже поступил к нам. В ближайшее время мы опубликуем его на сайте.</p>
+        <button class="sending-success__button" type="button">Закрыть окно</button>
+      </section>
     </main>
 
     <footer class="page-footer">
