--- a/source/photo.html
+++ b/source/photo.html
@@ -12,7 +12,6 @@
       </a>
       <nav class="main-nav">
         <button class="main-nav__toggle" type="button">Открыть меню</button>
-        <div class="main-nav__wrapper">
           <ul class="main-nav__list site-list">
             <li class="site-list__item">
               <a href="index.html">Главная</a>
@@ -27,7 +26,6 @@
               <a href="https://htmlacademy.ru/intensive/adaptive">HTML Academy</a>
             </li>
           </ul>
-        </div>
       </nav>
     </header>
 
@@ -43,26 +41,26 @@
       </section>
       <section class="photos">
         <ul class="photos__list gallary">
-          <li class="gallary__photo">
-            <img class="gallary__image" src="https://via.placeholder.com/280x280" width="280" height="280" alt="Неродные просторы">
+          <li class="gallary__item">
+            <a class="gallary__image-link><img class="gallary__image" src="https://via.placeholder.com/280x280" width="280" height="280" alt="Неродные просторы"></a>
             <p class="gallary__title">Неродные просторы</p>
             <p class="gallary__author">Автор фото: Борис</p>
             <p class="gallary__likes">1350</p>
           </li>
-          <li class="gallary__photo">
-            <img class="gallary__image" src="https://via.placeholder.com/280x280" width="280" height="280" alt="Местная растительность">
+          <li class="gallary__item">
+            <a class="gallary__image-link><img class="gallary__image" src="https://via.placeholder.com/280x280" width="280" height="280" alt="Местная растительность"></a>
             <p class="gallary__title">Местная растительность</p>
             <p class="gallary__author">Автор фото: Сергей</p>
             <p class="gallary__likes">143</p>
           </li>
-          <li class="gallary__photo">
-            <img class="gallary__image" src="https://via.placeholder.com/280x280" width="280" height="280" alt="Дорога на север">
+          <li class="gallary__item">
+            <a class="gallary__image-link><img class="gallary__image" src="https://via.placeholder.com/280x280" width="280" height="280" alt="Дорога на север"></a>
             <p class="gallary__title">Дорога на север</p>
             <p class="gallary__author">Автор фото: Петр</p>
             <p class="gallary__likes">96</p>
           </li>
-          <li class="gallary__photo">
-            <img class="gallary__image" src="https://via.placeholder.com/280x280" width="280" height="280" alt="Мост дьявола">
+          <li class="gallary__item">
+            <a class="gallary__image-link><img class="gallary__image" src="https://via.placeholder.com/280x280" width="280" height="280" alt="Мост дьявола"></a>
             <p class="gallary__title">Мост дьявола</p>
             <p class="gallary__author">Автор фото: Антон</p>
             <p class="gallary__likes">254</p>
