--- a/source/index.html
+++ b/source/index.html
@@ -39,60 +39,66 @@
         <p class="welcome-text__about">СЕДОНА — небольшой городок в Аризоне, заслуживающий большего!</p>
         <p class="welcome-text__reasons">Рассмотрим 5 причин, по которым Седона круче, чем гранд каньон!</p>
       </section>
-      <section class="reasons">
-        <ul class="reasons-list-1">
-          <li class="reasons-list-1__item">
-            <div class="reason-number reason-number--colored">
-              <h3 class="reason-number__header">Настоящий городок</h3>
-              <p class="reason-number__number">- №1 -</p>
-              <p class="reason-number__description">Седона - не аттракцион для туристов, там течет своя жизнь</p>
-            </div>
-            <img class="reasons-list-1__photo-image" src="https://via.placeholder.com/260x320" width="320" height="260" alt="Фото города">
-          </li>
-          <li class="reasons-list-1__item">
-            <ul class="features-list">
-              <li class="feature">
-                <h3 class="feature__header feature__header--house">Жилье</h3>
-                <p class="feature__description">Рекомендуем пожить в настоящем мотеле, все как в кино!</p>
-              </li>
-              <li class="feature">
-                <h3 class="feature__header feature__header--present">Сувениры</h3>
-                <p class="feature__description">Не только китайского, но и местного производства!</p>
-              </li>
-              <li class="feature">
-                <h3 class="feature__header feature__header--burger">Еда</h3>
-                <p class="feature__description">Всегда заказывайте фирменный бургер, вы не разочаруетесь!</p>
-              </li>
-            </ul>
-          </li>
-          <li class="reasons-list-1__item">
-            <div class="reason-number reason-number--colored">
-              <h3 class="reason-number__header">Там есть мост дьявола</h3>
-              <p class="reason-number__number">- №2 -</p>
-              <p class="reason-number__description">Да, по нему можно пройти! Если вы осмелитесь, конечно</p>
-            </div>
-            <img class="reasons-list-1__photo-image" src="https://via.placeholder.com/260x320" width="320" height="260" alt="Фото моста дьявола">
-          </li>
-          <li class="reasons-list-1__item">
-            <ul class="reasons-list-3">
-              <li class="reason-number">
-                <h3 class="reason-number__header">Небольшая площадь</h3>
-                <p class="reason-number__number">- №3 -</p>
-                <p class="reason-number__description">Все интересные места находятся очень близко</p>
-              </li>
-              <li class="reason-number">
-                <h3 class="reason-number__header">Красивая дорога</h3>
-                <p class="reason-number__number">- №4 -</p>
-                <p class="reason-number__description">Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
-              </li>
-              <li class="reason-number">
-                <h3 class="reason-number__header">Мало туристов</h3>
-                <p class="reason-number__number">- №5 -</p>
-                <p class="reason-number__description">Большинство едет в Гранд Каньон и толпится там</p>
-              </li>
-            </ul>
-          </li>
-        </ul>
+      <section class="reasons-section">
+        <article class="reasons">
+          <ul class="reasons-list-image">
+            <li class="reasons-list-image__item">
+              <h3 class="reasons-list-image__header">Настоящий городок</h3>
+              <p class="reasons-list-image__number">- №1 -</p>
+              <p class="reasons-list-image__description">Седона - не аттракцион для туристов, там течет своя жизнь</p>
+            </li>
+            <li class="reasons-list-image__item">
+              <img class="reasons-list-image__photo" src="https://via.placeholder.com/260x320" width="320" height="260" alt="Фото города">
+            </li>
+          </ul>
+        </article>
+        <article class="reasons">
+          <ul class="features-list">
+            <li class="features-list__item">
+              <h3 class="features-list__header features-list__header--house">Жилье</h3>
+              <p class="features-list__description">Рекомендуем пожить в настоящем мотеле, все как в кино!</p>
+            </li>
+            <li class="features-list__item">
+              <h3 class="features-list__header features-list__header--present">Сувениры</h3>
+              <p class="features-list__description">Не только китайского, но и местного производства!</p>
+            </li>
+            <li class="features-list__item">
+              <h3 class="features-list__header features-list__header--burger">Еда</h3>
+              <p class="features-list__description">Всегда заказывайте фирменный бургер, вы не разочаруетесь!</p>
+            </li>
+          </ul>
+        </article>
+        <article class="reasons">
+          <ul class="reasons-list-image">
+            <li class="reasons-list-image__item">
+              <h3 class="reasons-list-image__header">Там есть мост дьявола</h3>
+              <p class="reasons-list-image__number">- №2 -</p>
+              <p class="reasons-list-image__description">Да, по нему можно пройти! Если вы осмелитесь, конечно</p>
+            </li>
+            <li class="reasons-list-image__item">
+              <img class="reasons-list-image__photo" src="https://via.placeholder.com/260x320" width="320" height="260" alt="Фото моста дьявола">
+            </li>
+          </ul>
+        </article>
+        <article class="reasons">
+          <ul class="reasons-list">
+            <li class="reasons-list__item">
+              <h3 class="reasons-list__header">Небольшая площадь</h3>
+              <p class="reasons-list__number">- №3 -</p>
+              <p class="reasons-list__description">Все интересные места находятся очень близко</p>
+            </li>
+            <li class="reasons-list__item">
+              <h3 class="reasons-list__header">Красивая дорога</h3>
+              <p class="reasons-list__number">- №4 -</p>
+              <p class="reasons-list__description">Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
+            </li>
+            <li class="reasons-list__item">
+              <h3 class="reasons-list__header">Мало туристов</h3>
+              <p class="reasons-list__number">- №5 -</p>
+              <p class="reasons-list__description">Большинство едет в Гранд Каньон и толпится там</p>
+            </li>
+          </ul>
+        </article>
       </section>
       <section class="hotel-search">
         <h2 class="visually-hidden">Поиск гостиницы</h2>
