--- a/source/form.html
+++ b/source/form.html
@@ -56,7 +56,7 @@
           </p>
         </div>
         <div class="contacts">
-          <p class="introduce__caption">Контактная информация:</p>
+          <p class="contacts__caption">Контактная информация:</p>
           <p class="contacts__text-input">
             <label class="contacts__label" for="contacts-text__phone">Контактный телефон*:</label>
             <input class="contacts__input" id="contacts-text__phone" type="tel" name="phone" placeholder="Введите телефон" required>
@@ -67,7 +67,7 @@
           </p>
         </div>
         <div class="impression">
-          <p class="introduce__caption">Ваше общее впечатление:</p>
+          <p class="impression__caption">Ваше общее впечатление:</p>
           <p>
             <input class="impression__radio" type="radio" name="impression-group" id="impression__positive" value="positive" checked>
             <label class="impression__label" for="impression__positive">Скорее положительное</label>
@@ -82,7 +82,7 @@
           </p>
         </div>
         <div class="attractions">
-          <p class="introduce__caption">Посещенные достопримечательности:</p>
+          <p class="attractions__caption">Посещенные достопримечательности:</p>
             <p>
               <input class="attractions__checkbox" type="checkbox" name="attractions-devil-bridge" id="attractions__devil-bridge" value="devil-bridge" checked>
               <label class="attractions__label" for="attractions__devil-bridge">Мост дьявола</label>
@@ -101,7 +101,7 @@
             </p>
           </div>
         <div class="emotions">
-          <p class="introduce__caption">Опишите свои эмоции:</p>
+          <p class="emotions__caption">Опишите свои эмоции:</p>
           <p>
             <textarea name="emotions__description">Опишите подробно все свои восторги</textarea>
           </p>
