--- a/source/index.html
+++ b/source/index.html
@@ -39,67 +39,57 @@
         <p class="welcome-text__about">СЕДОНА — небольшой городок в Аризоне, заслуживающий большего!</p>
         <p class="welcome-text__reasons">Рассмотрим 5 причин, по которым Седона круче, чем гранд каньон!</p>
       </section>
-      <section class="reasons-section">
-        <article class="reasons">
-          <ul class="reasons-list-image">
-            <li class="reasons-list-image__item">
-              <h3 class="reasons-list-image__header">Настоящий городок</h3>
-              <p class="reasons-list-image__number">- №1 -</p>
-              <p class="reasons-list-image__description">Седона - не аттракцион для туристов, там течет своя жизнь</p>
-            </li>
-            <li class="reasons-list-image__item">
-              <img class="reasons-list-image__photo" src="https://via.placeholder.com/260x320" width="320" height="260" alt="Фото города">
-            </li>
-          </ul>
-        </article>
-        <article class="reasons">
-          <ul class="features-list">
-            <li class="features-list__item">
-              <h3 class="features-list__header features-list__header--house">Жилье</h3>
-              <p class="features-list__description">Рекомендуем пожить в настоящем мотеле, все как в кино!</p>
-            </li>
-            <li class="features-list__item">
-              <h3 class="features-list__header features-list__header--present">Сувениры</h3>
-              <p class="features-list__description">Не только китайского, но и местного производства!</p>
-            </li>
-            <li class="features-list__item">
-              <h3 class="features-list__header features-list__header--burger">Еда</h3>
-              <p class="features-list__description">Всегда заказывайте фирменный бургер, вы не разочаруетесь!</p>
-            </li>
-          </ul>
-        </article>
-        <article class="reasons">
-          <ul class="reasons-list-image">
-            <li class="reasons-list-image__item">
-              <h3 class="reasons-list-image__header">Там есть мост дьявола</h3>
-              <p class="reasons-list-image__number">- №2 -</p>
-              <p class="reasons-list-image__description">Да, по нему можно пройти! Если вы осмелитесь, конечно</p>
-            </li>
-            <li class="reasons-list-image__item">
-              <img class="reasons-list-image__photo" src="https://via.placeholder.com/260x320" width="320" height="260" alt="Фото моста дьявола">
-            </li>
-          </ul>
-        </article>
-        <article class="reasons">
-          <ul class="reasons-list">
-            <li class="reasons-list__item">
-              <h3 class="reasons-list__header">Небольшая площадь</h3>
-              <p class="reasons-list__number">- №3 -</p>
-              <p class="reasons-list__description">Все интересные места находятся очень близко</p>
-            </li>
-            <li class="reasons-list__item">
-              <h3 class="reasons-list__header">Красивая дорога</h3>
-              <p class="reasons-list__number">- №4 -</p>
-              <p class="reasons-list__description">Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
-            </li>
-            <li class="reasons-list__item">
-              <h3 class="reasons-list__header">Мало туристов</h3>
-              <p class="reasons-list__number">- №5 -</p>
-              <p class="reasons-list__description">Большинство едет в Гранд Каньон и толпится там</p>
-            </li>
-          </ul>
-        </article>
-      </section>
+      <article class="reasons">
+        <div class="reasons__item">
+          <h3 class="reasons__header">Настоящий городок</h3>
+          <p class="reasons__number">- №1 -</p>
+          <p class="reasons__description">Седона - не аттракцион для туристов, там течет своя жизнь</p>
+        </div>
+        <img class="reasons__photo" src="https://via.placeholder.com/260x320" width="320" height="260" alt="Фото города">
+      </article>
+      <article class="reasons">
+        <ul class="features-list">
+          <li class="features-list__item">
+            <h3 class="features-list__header features-list__header--house">Жилье</h3>
+            <p class="features-list__description">Рекомендуем пожить в настоящем мотеле, все как в кино!</p>
+          </li>
+          <li class="features-list__item">
+            <h3 class="features-list__header features-list__header--present">Сувениры</h3>
+            <p class="features-list__description">Не только китайского, но и местного производства!</p>
+          </li>
+          <li class="features-list__item">
+            <h3 class="features-list__header features-list__header--burger">Еда</h3>
+            <p class="features-list__description">Всегда заказывайте фирменный бургер, вы не разочаруетесь!</p>
+          </li>
+        </ul>
+      </article>
+      <article class="reasons">
+        <div class="reasons__item">
+          <h3 class="reasons__header">Там есть мост дьявола</h3>
+          <p class="reasons__number">- №2 -</p>
+          <p class="reasons__description">Да, по нему можно пройти! Если вы осмелитесь, конечно</p>
+        </div>
+        <img class="reasons__photo" src="https://via.placeholder.com/260x320" width="320" height="260" alt="Фото моста дьявола">
+      </article>
+      <article class="reasons">
+        <ul class="reasons-list">
+          <li class="reasons-list__item">
+            <h3 class="reasons-list__header">Небольшая площадь</h3>
+            <p class="reasons-list__number">- №3 -</p>
+            <p class="reasons-list__description">Все интересные места находятся очень близко</p>
+          </li>
+          <li class="reasons-list__item">
+            <h3 class="reasons-list__header">Красивая дорога</h3>
+            <p class="reasons-list__number">- №4 -</p>
+            <p class="reasons-list__description">Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
+          </li>
+          <li class="reasons-list__item">
+            <h3 class="reasons-list__header">Мало туристов</h3>
+            <p class="reasons-list__number">- №5 -</p>
+            <p class="reasons-list__description">Большинство едет в Гранд Каньон и толпится там</p>
+          </li>
+        </ul>
+      </article>
       <section class="hotel-search">
         <h2 class="visually-hidden">Поиск гостиницы</h2>
         <p class="hotel-search__header">Заинтересовались?</p>
