Задание 3 - Завершаем разметку

--- a/source/photo.html
+++ b/source/photo.html
@@ -76,7 +76,12 @@
         <video class="video-player__movie" width="320" height="210" poster="https://via.placeholder.com/320x210">
           <source src="#" type='video/webm; codecs="vp8, vorbis"'>
         </video>
-        <div class="video-player__controls"></div>
+        <div class="video-player__controls">
+          <div class="video-player__progress"></div>
+          <div class="video-player__replay"></div>
+          <div class="video-player__subtitles"></div>
+          <div class="video-player__fullscreen"></div>
+        </div>
       </section>
     </main>
 
