--- a/source/photo.html
+++ b/source/photo.html
@@ -3,6 +3,8 @@
   <head>
     <meta charset="utf-8">
     <title>HTML Academy: Седона - Фото и видео</title>
+    <meta name="viewport" content="width=device-width,initial-scale=1">
+    <link rel="stylesheet" href="./css/normalize.css">
     <link rel="stylesheet" href="./css/style.css">
   </head>
   <body>
@@ -12,22 +14,22 @@
         <a class="page-header__logo" >
           <img class="page-header__logo-image" src="./img/logo-sedona-mobile.svg" width="102" height="83" alt="Логитип Седоны">
         </a>
+        <button class="page-header__open-nav" type="button">Открыть меню</button>
         <nav class="main-nav">
-          <button class="main-nav__toggle" type="button">Открыть меню</button>
-            <ul class="main-nav__list site-list">
-              <li class="site-list__item">
-                <a href="index.html">Главная</a>
-              </li>
-              <li class="site-list__item site-list__item--active">
-                <a>Фото и видео</a>
-              </li>
-              <li class="site-list__item">
-                <a href="form.html">Форма отзыва</a>
-              </li>
-              <li class="site-list__item">
-                <a href="https://htmlacademy.ru/intensive/adaptive">HTML Academy</a>
-              </li>
-            </ul>
+          <ul class="main-nav__list site-list">
+            <li class="site-list__item">
+              <a href="index.html">Главная</a>
+            </li>
+            <li class="site-list__item site-list__item--active">
+              <a>Фото и видео</a>
+            </li>
+            <li class="site-list__item">
+              <a href="form.html">Форма отзыва</a>
+            </li>
+            <li class="site-list__item">
+              <a href="https://htmlacademy.ru/intensive/adaptive">HTML Academy</a>
+            </li>
+          </ul>
         </nav>
       </header>
 
