--- a/source/form.html
+++ b/source/form.html
@@ -54,71 +54,73 @@
           <p class="welcome-text__reasons welcome-text__reasons--narrow">Помогите нашим отелям стать лучше! Оставьте отзыв о них, а так же о посещенных вами достопримечательностях</p>
         </section>
         <form class="review" action="https://echo.htmlacademy.ru" method="POST">
-          <div class="introduce">
-            <p class="introduce__caption">Представьтесь:</p>
-            <p class="introduce__text-input">
-              <label class="introduce__label" for="introduce-text__name">Имя*:</label>
-              <input class="introduce__input" id="introduce-text__name" type="text" name="name" placeholder="Петр" required>
-            </p>
-            <p class="introduce__text-input">
-              <label class="introduce__label" for="introduce-text__last-name">Фамилия*:</label>
-              <input class="introduce__input" id="introduce-text__last-name" type="text" name="last-name" placeholder="Иванов" required>
-            </p>
-            <p class="introduce__text-input">
-              <label class="introduce__label" for="introduce-text__patronymic-name">Отчество:</label>
-              <input class="introduce__input" id="introduce-text__patronymic-name" type="text" name="patronymic-name" placeholder="Александрович">
-            </p>
-          </div>
-          <div class="contacts">
-            <p class="contacts__caption">Контактная информация:</p>
-            <p class="contacts__text-input">
-              <label class="contacts__label" for="contacts-text__phone">Контактный телефон*:</label>
-              <input class="contacts__input" id="contacts-text__phone" type="tel" name="phone" placeholder="Введите телефон" required>
-            </p>
-            <p class="contacts__text-input">
-              <label class="contacts__label" for="contacts-text__email">Электронная почта*:</label>
-              <input class="contacts__input" id="contacts-text__email" type="email" name="email" placeholder="Введите e-mail" required>
-            </p>
-          </div>
-          <div class="impression">
-            <p class="impression__caption">Ваше общее впечатление:</p>
-            <p>
-              <input class="impression__radio" type="radio" name="impression-group" id="impression__positive" value="positive" checked>
-              <label class="impression__label" for="impression__positive">Скорее положительное</label>
-            </p>
-            <p>
-              <input class="impression__radio" type="radio" name="impression-group" id="impression__negative" value="negative">
-              <label class="impression__label" for="impression__negative">Скорее отрицательное</label>
-            </p>
-            <p>
-              <input class="impression__radio" type="radio" name="impression-group" id="impression__difficult" value="difficult">
-              <label class="impression__label" for="impression__difficult">Затрудняюсь ответить</label>
-            </p>
-          </div>
-          <div class="attractions">
-            <p class="attractions__caption">Посещенные достопримечательности:</p>
-              <p>
-                <input class="attractions__checkbox" type="checkbox" name="attractions-devil-bridge" id="attractions__devil-bridge" value="devil-bridge" checked>
-                <label class="attractions__label" for="attractions__devil-bridge">Мост дьявола</label>
+          <div class="rewiew-wrapper">
+            <div class="introduce">
+              <p class="introduce__caption">Представьтесь:</p>
+              <p class="introduce__text-input">
+                <label class="introduce__label" for="introduce-text__name">Имя*:</label>
+                <input class="introduce__input" id="introduce-text__name" type="text" name="name" placeholder="Петр" required>
               </p>
-              <p>
-                <input class="attractions__checkbox" type="checkbox" name="attractions-bell-mountine" id="attractions__bell-mountine" value="bell-mountine" checked>
-                <label class="attractions__label" for="attractions__bell-mountine">Гора-Колокол</label>
+              <p class="introduce__text-input">
+                <label class="introduce__label" for="introduce-text__last-name">Фамилия*:</label>
+                <input class="introduce__input" id="introduce-text__last-name" type="text" name="last-name" placeholder="Иванов" required>
               </p>
-              <p>
-                <input class="attractions__checkbox" type="checkbox" name="attractions-slide-park" id="attractions__slide-park" value="slide-park" checked>
-                <label class="attractions__label" for="attractions__slide-park">Слайд-Парк</label>
-              </p>
-              <p>
-                <input class="attractions__checkbox" type="checkbox" name="attractions-red-rocks" id="attractions__red-rocks" value="red-rocks">
-                <label class="attractions__label" for="attractions__red-rocks">Красные скалы</label>
+              <p class="introduce__text-input">
+                <label class="introduce__label" for="introduce-text__patronymic-name">Отчество:</label>
+                <input class="introduce__input" id="introduce-text__patronymic-name" type="text" name="patronymic-name" placeholder="Александрович">
               </p>
             </div>
-          <div class="emotions">
-            <p class="emotions__caption">Опишите свои эмоции:</p>
-            <p>
-              <textarea class="emotions__description" name="emotions__description">Опишите подробно все свои восторги</textarea>
-            </p>
+            <div class="contacts">
+              <p class="contacts__caption">Контактная информация:</p>
+              <p class="contacts__text-input">
+                <label class="contacts__label" for="contacts-text__phone">Контактный телефон*:</label>
+                <input class="contacts__input" id="contacts-text__phone" type="tel" name="phone" placeholder="Введите телефон" required>
+              </p>
+              <p class="contacts__text-input">
+                <label class="contacts__label" for="contacts-text__email">Электронная почта*:</label>
+                <input class="contacts__input" id="contacts-text__email" type="email" name="email" placeholder="Введите e-mail" required>
+              </p>
+            </div>
+            <div class="impression">
+              <p class="impression__caption">Ваше общее впечатление:</p>
+              <p>
+                <input class="impression__radio" type="radio" name="impression-group" id="impression__positive" value="positive" checked>
+                <label class="impression__label" for="impression__positive">Скорее положительное</label>
+              </p>
+              <p>
+                <input class="impression__radio" type="radio" name="impression-group" id="impression__negative" value="negative">
+                <label class="impression__label" for="impression__negative">Скорее отрицательное</label>
+              </p>
+              <p>
+                <input class="impression__radio" type="radio" name="impression-group" id="impression__difficult" value="difficult">
+                <label class="impression__label" for="impression__difficult">Затрудняюсь ответить</label>
+              </p>
+            </div>
+            <div class="attractions">
+              <p class="attractions__caption">Посещенные достопримечательности:</p>
+                <p>
+                  <input class="attractions__checkbox" type="checkbox" name="attractions-devil-bridge" id="attractions__devil-bridge" value="devil-bridge" checked>
+                  <label class="attractions__label" for="attractions__devil-bridge">Мост дьявола</label>
+                </p>
+                <p>
+                  <input class="attractions__checkbox" type="checkbox" name="attractions-bell-mountine" id="attractions__bell-mountine" value="bell-mountine" checked>
+                  <label class="attractions__label" for="attractions__bell-mountine">Гора-Колокол</label>
+                </p>
+                <p>
+                  <input class="attractions__checkbox" type="checkbox" name="attractions-slide-park" id="attractions__slide-park" value="slide-park" checked>
+                  <label class="attractions__label" for="attractions__slide-park">Слайд-Парк</label>
+                </p>
+                <p>
+                  <input class="attractions__checkbox" type="checkbox" name="attractions-red-rocks" id="attractions__red-rocks" value="red-rocks">
+                  <label class="attractions__label" for="attractions__red-rocks">Красные скалы</label>
+                </p>
+              </div>
+            <div class="emotions">
+              <p class="emotions__caption">Опишите свои эмоции:</p>
+              <p>
+                <textarea class="emotions__description" name="emotions__description">Опишите подробно все свои восторги</textarea>
+              </p>
+            </div>
           </div>
           <button class="review__submit" type="submit">Отправить отзыв</button>
         </form>
