--- a/source/index.html
+++ b/source/index.html
@@ -77,7 +77,7 @@
             </li>
           </ul>
         </article>
-        <article class="reasons">
+        <article class="reasons reasons--image-left">
           <div class="reasons__item">
             <h3 class="reasons__header">Там есть мост дьявола</h3>
             <p class="reasons__number">- №2 -</p>
