Верстка адаптивной сетки ч.3

--- a/source/form.html
+++ b/source/form.html
@@ -122,7 +122,10 @@
               </p>
             </div>
           </div>
-          <button class="review__submit" type="submit">Отправить отзыв</button>
+          <div class="review__button-wrapper">
+            <button class="review__submit" type="submit">Отправить отзыв</button>
+            <!-- <p class="review__required-info">* - обязательные поля</p> -->
+          </div>
         </form>
         <section class="sending-fail">
           <h2 class="sending-fail__header">Что-то пошло не так</h2>
