--- a/source/index.html
+++ b/source/index.html
@@ -12,6 +12,15 @@
 
       <header class="page-header">
         <nav class="main-nav">
+          <button class="page-header__open-nav" type="button">
+              <svg version="1.0" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="22.928px" height="21.982px" viewBox="0 0 22.928 21.982" enable-background="new 0 0 22.928 21.982" xml:space="preserve">
+                <g>
+                  <rect width="22.928" height="3.964"/>
+                  <rect y="9.009" width="22.928" height="3.964"/>
+                  <rect y="18.018" width="22.928" height="3.964"/>
+                </g>
+              </svg>
+          </button>
           <ul class="main-nav__list site-list">
             <li class="site-list__item site-list__item--left">
               <a class="site-list__item--active">Главная</a>
@@ -27,20 +36,9 @@
             </li>
           </ul>
         </nav>
-        <div class="page-header__logo-wrapper">
-          <a class="page-header__logo" >
-            <img class="page-header__logo-image" src="./img/logo-sedona-mobile.svg" width="102" height="83" alt="Логитип Седоны">
-          </a>
-          <button class="page-header__open-nav" type="button">
-              <svg version="1.0" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="22.928px" height="21.982px" viewBox="0 0 22.928 21.982" enable-background="new 0 0 22.928 21.982" xml:space="preserve">
-                <g>
-                  <rect width="22.928" height="3.964"/>
-                  <rect y="9.009" width="22.928" height="3.964"/>
-                  <rect y="18.018" width="22.928" height="3.964"/>
-                </g>
-              </svg>
-          </button>
-        </div>
+        <a  href="/" class="page-header__logo" >
+          <img class="page-header__logo-image" src="./img/logo-sedona-mobile.svg" width="102" height="83" alt="Логитип Седоны">
+        </a>
       </header>
 
       <main class="page-main">
