Исправления страниц index и photo

--- a/source/index.html
+++ b/source/index.html
@@ -43,8 +43,8 @@
 
       <main class="page-main">
         <h1 class="visually-hidden">Седона, штат Аризона</h1>
-        <section class="welcome">
-          <img class="welcome__text-image" src="./img/text-sedona-index.svg" width="282" height="214" alt="Седона">
+        <section class="promo">
+          <img class="promo__text-image" src="./img/text-sedona-index.svg" width="282" height="214" alt="Седона">
         </section>
         <section class="welcome-text">
           <h2 class="visually-hidden">Добро пожаловать в Седону</h2>
@@ -59,23 +59,23 @@
           </div>
           <img class="reasons__photo" src="./img/main-city-mobile@1x.jpg" width="320" height="260" alt="Фото города">
         </article>
-        <article class="reasons">
-          <ul class="features-list">
-            <li class="features-list__item">
-              <h3 class="features-list__header features-list__header--house">Жилье</h3>
-              <p class="features-list__description">Рекомендуем пожить в настоящем мотеле, все как в кино!</p>
-            </li>
-            <li class="features-list__item">
-              <h3 class="features-list__header features-list__header--present">Сувениры</h3>
-              <p class="features-list__description">Не только китайского, но и местного производства!</p>
-            </li>
-            <li class="features-list__item">
-              <h3 class="features-list__header features-list__header--burger">Еда</h3>
-              <p class="features-list__description">Всегда заказывайте фирменный бургер, вы не разочаруетесь!</p>
-            </li>
-          </ul>
-        </article>
-        <article class="reasons reasons--image-left">
+        <!-- <article class="reasons"> -->
+        <ul class="features-list">
+          <li class="features-list__item">
+            <h3 class="features-list__header features-list__header--house">Жилье</h3>
+            <p class="features-list__description">Рекомендуем пожить в настоящем мотеле, все как в кино!</p>
+          </li>
+          <li class="features-list__item">
+            <h3 class="features-list__header features-list__header--present">Сувениры</h3>
+            <p class="features-list__description">Не только китайского, но и местного производства!</p>
+          </li>
+          <li class="features-list__item">
+            <h3 class="features-list__header features-list__header--burger">Еда</h3>
+            <p class="features-list__description">Всегда заказывайте фирменный бургер, вы не разочаруетесь!</p>
+          </li>
+        </ul>
+        <!-- </article> -->
+        <article class="reasons reasons--reverse">
           <div class="reasons__item">
             <h3 class="reasons__header">Там есть мост дьявола</h3>
             <p class="reasons__number">- №2 -</p>
@@ -83,25 +83,25 @@
           </div>
           <img class="reasons__photo" src="./img/main-bridge-mobile@1x.jpg" width="320" height="260" alt="Фото моста дьявола">
         </article>
-        <article class="reasons">
-          <ul class="reasons-list">
-            <li class="reasons-list__item">
-              <h3 class="reasons-list__header">Небольшая площадь</h3>
-              <p class="reasons-list__number">- №3 -</p>
-              <p class="reasons-list__description">Все интересные места находятся очень близко</p>
-            </li>
-            <li class="reasons-list__item">
-              <h3 class="reasons-list__header">Красивая дорога</h3>
-              <p class="reasons-list__number">- №4 -</p>
-              <p class="reasons-list__description">Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
-            </li>
-            <li class="reasons-list__item">
-              <h3 class="reasons-list__header">Мало туристов</h3>
-              <p class="reasons-list__number">- №5 -</p>
-              <p class="reasons-list__description">Большинство едет в Гранд Каньон и толпится там</p>
-            </li>
-          </ul>
-        </article>
+        <!-- <article class="reasons"> -->
+        <ul class="reasons">
+          <li class="reasons__item reasons--other">
+            <h3 class="reasons__header">Небольшая площадь</h3>
+            <p class="reasons__number">- №3 -</p>
+            <p class="reasons__description">Все интересные места находятся очень близко</p>
+          </li>
+          <li class="reasons__item reasons--other">
+            <h3 class="reasons__header">Красивая дорога</h3>
+            <p class="reasons__number">- №4 -</p>
+            <p class="reasons__description">Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
+          </li>
+          <li class="reasons__item reasons--other">
+            <h3 class="reasons__header">Мало туристов</h3>
+            <p class="reasons__number">- №5 -</p>
+            <p class="reasons__description">Большинство едет в Гранд Каньон и толпится там</p>
+          </li>
+        </ul>
+        <!-- </article> -->
         <section class="hotel-search">
           <h2 class="visually-hidden">Поиск гостиницы</h2>
           <p class="hotel-search__header">Заинтересовались?</p>
