--- a/source/form.html
+++ b/source/form.html
@@ -43,8 +43,8 @@
 
       <main class="page-main">
         <h1 class="visually-hidden">Отправить отзыв</h1>
-        <section class="short-welcome">
-          <img class="short-welcome__short-text-image" src="./img/text-sedona.svg" width="229" height="39" alt="Седона">
+        <section class="short-promo">
+          <img class="short-promo__short-text-image" src="./img/text-sedona.svg" width="229" height="39" alt="Седона">
         </section>
         <section class="welcome-text">
           <h2 class="visually-hidden">Добро пожаловать в Седону</h2>
