Задание 5 - верстка modile версии index.html ч.1

--- a/source/index.html
+++ b/source/index.html
@@ -48,7 +48,7 @@
         </section>
         <section class="welcome-text">
           <h2 class="visually-hidden">Добро пожаловать в Седону</h2>
-          <p class="welcome-text__about">СЕДОНА — небольшой городок в Аризоне, заслуживающий большего!</p>
+          <p class="welcome-text__about">СЕДОНА &ndash; небольшой городок в Аризоне, заслуживающий большего!</p>
           <p class="welcome-text__reasons">Рассмотрим 5 причин, по которым Седона круче, чем гранд каньон!</p>
         </section>
         <article class="reasons">
