Задание 5 - верстка modile версии index.html ч.2

--- a/source/index.html
+++ b/source/index.html
@@ -54,8 +54,8 @@
         <article class="reasons">
           <div class="reasons__item">
             <h3 class="reasons__header">Настоящий городок</h3>
-            <p class="reasons__number">- №1 -</p>
-            <p class="reasons__description">Седона - не аттракцион для туристов, там течет своя жизнь</p>
+            <p class="reasons__number">&ndash; №1 &ndash;</p>
+            <p class="reasons__description">Седона не аттракцион для туристов, там течет своя жизнь</p>
           </div>
           <img class="reasons__photo" src="./img/main-city-mobile@1x.jpg" width="320" height="260" alt="Фото города">
         </article>
@@ -78,7 +78,7 @@
         <article class="reasons reasons--reverse">
           <div class="reasons__item">
             <h3 class="reasons__header">Там есть мост дьявола</h3>
-            <p class="reasons__number">- №2 -</p>
+            <p class="reasons__number">&ndash; №2 &ndash;</p>
             <p class="reasons__description">Да, по нему можно пройти! Если вы осмелитесь, конечно</p>
           </div>
           <img class="reasons__photo" src="./img/main-bridge-mobile@1x.jpg" width="320" height="260" alt="Фото моста дьявола">
@@ -87,18 +87,18 @@
         <ul class="reasons">
           <li class="reasons__item reasons--other">
             <h3 class="reasons__header">Небольшая площадь</h3>
-            <p class="reasons__number">- №3 -</p>
+            <p class="reasons__number">&ndash; №3 &ndash;</p>
             <p class="reasons__description">Все интересные места находятся очень близко</p>
           </li>
           <li class="reasons__item reasons--other">
             <h3 class="reasons__header">Красивая дорога</h3>
-            <p class="reasons__number">- №4 -</p>
-            <p class="reasons__description">Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
+            <p class="reasons__number">&ndash; №4 &ndash;</p>
+            <p class="reasons__description">&nbsp; Ехать в Седону из Лас-Вегаса &nbsp; совсем не скучно!</p>
           </li>
           <li class="reasons__item reasons--other">
             <h3 class="reasons__header">Мало туристов</h3>
-            <p class="reasons__number">- №5 -</p>
-            <p class="reasons__description">Большинство едет в Гранд Каньон и толпится там</p>
+            <p class="reasons__number">&ndash; №5 &ndash;</p>
+            <p class="reasons__description">&nbsp; Большинство едет в Гранд Каньон &nbsp; и толпится там</p>
           </li>
         </ul>
         <!-- </article> -->
