Задание 5 - верстка modile версии index.html ч.4

--- a/source/index.html
+++ b/source/index.html
@@ -44,7 +44,8 @@
       <main class="page-main">
         <h1 class="visually-hidden">Седона, штат Аризона</h1>
         <section class="promo">
-          <img class="promo__text-image" src="./img/text-sedona-index.svg" width="282" height="214" alt="Седона">
+          <!-- <img class="promo__text-image" src="./img/text-sedona-index.svg" width="282" height="214" alt="Седона"> -->
+          <img class="promo__text-image" src="./img/text-sedona-index.svg" alt="Седона">
         </section>
         <section class="welcome-text">
           <h2 class="visually-hidden">Добро пожаловать в Седону</h2>
@@ -77,7 +78,7 @@
         <!-- </article> -->
         <article class="reasons reasons--reverse">
           <div class="reasons__item">
-            <h3 class="reasons__header">Там есть мост дьявола</h3>
+            <h3 class="reasons__header">&nbsp;Там есть &nbsp; мост дьявола</h3>
             <p class="reasons__number">&ndash; №2 &ndash;</p>
             <p class="reasons__description">Да, по нему можно пройти! Если вы осмелитесь, конечно</p>
           </div>
