--- a/source/photo.html
+++ b/source/photo.html
@@ -41,10 +41,10 @@
         </a>
       </header>
 
-      <main class="page-main">
+      <main class="page-photo">
         <h1 class="visually-hidden">Фото и видео галлерея</h1>
         <section class="short-promo">
-          <img class="short-promo__short-text-image" src="./img/text-sedona.svg" width="229" height="39" alt="Седона">
+          <img class="short-promo__short-text-image" src="./img/text-sedona.svg" alt="Седона">
         </section>
         <section class="welcome-text">
           <h2 class="visually-hidden">Добро пожаловать в Седону</h2>
